# terraform-aws-transfer-server-custom-idp

./: -inputs.tf  -outputs.tf  .gitignore  Makefile  README.md  apigateway.tf  default_iam_role.tf  lambda.tf  main.tf  pyproject.toml
files/: sftp_lambda.py
tests/: test_generate_home_directory.py  test_log.py
transfer_server_custom_idp/: auth.py  errors.py  home_directory.py  lambda_handler.py  log.py  models.py  settings.py
transfer_server_custom_idp/models/: secret_model.py
transfer_server_custom_idp/s3_service/: s3_handler_functions.py
transfer_server_custom_idp/secrets_manager_service/: secrets_manager_handler.py
