[tool.poetry]
name = "transfer-server-custom-idp"
version = "0.4.0"
description = "Secrets Manager identity provider for AWS Transfer Family"
authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
sentry-sdk = "1.30.0"
jinja2 = "^3.0.1"
pydantic = "1.10.8"
documented = "^0.1.1"
structlog = "^21.1.0"
structlog-sentry = "^1.4.0"
boto3 = "1.20.24"
passlib = "^1.7.4"



[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "0.18.0"
flake8-bandit = "4.1.1"
import-linter = "1.2"
add-trailing-comma = "2.4.0"
pip = "^21.0.1"
mypy = "1.5.1"
boto3 = "1.20.24"
pytest = "8.3.3"
pytest-dependency = "0.5.1"
bandit = "1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
